banner-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banner-server-service-external
  namespace: default
spec:
  type: ExternalName
  externalName: banner-server-service.banner.svc.cluster.local
  ports:
    - port: 5000
